--- a/source/sass/blocks/comment.scss
+++ b/source/sass/blocks/comment.scss
@@ -25,7 +25,6 @@
   box-sizing: border-box;
   padding: 14px 16px;
   width: 100%;
-  border: none;
   border: $borderGrayTypeOne;
 }
 
@@ -40,5 +39,19 @@
     height: 174px;
     padding-left: 71px;
     padding-right: 71px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .comment__title {
+    margin-bottom: 20px;
+    padding-left: 110px;
+  }
+
+  .comment__inner {
+    width: $largeDeviceWidth;
+
+    padding-left: 110px;
+    padding-right: 110px;
   }
 }
