--- a/source/sass/blocks/categories-button.scss
+++ b/source/sass/blocks/categories-button.scss
@@ -1,13 +1,29 @@
 .categories-button {
+  position: relative;
+  padding-right: 35px;
+
   font-family: $oswaldRegular;
   font-size: $basicFontSize;
   line-height: 16px;
   text-transform: uppercase;
   color: $basicFontColor;
+
+  &::after {
+    position: absolute;
+    content: "";
+    width: 24px;
+    height: 11px;
+    right: 0;
+    bottom: 50%;
+    transform: translateY(50%);
+    background-image: url("../img/icon-right-arrow-long.svg");
+    background-repeat: no-repeat;
+  }
 }
 
 @media (min-width: 768px) {
   .categories-button {
+    padding-right: 50px;
     font-size: $lowFontSize;
     line-height: $lowLineHeight;
   }
