--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -67,6 +67,10 @@
     border-bottom: $borderGrayTypeOne;
   }
 
+  .page-main__example {
+    border-top: $borderGrayTypeOne;
+  }
+
   .page-main__products {
     box-sizing: border-box;
     margin: 0 auto;
