--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -10,4 +10,19 @@
 
     border-top: none;
   }
+
+  .social__icon--vk svg {
+    width: 30px;
+    height: 16px;
+  }
+
+  .social__icon--inst svg {
+    width: 23px;
+    height: 23px;
+  }
+
+  .social__icon--fb svg {
+    width: 14px;
+    height: 28px;
+  }
 }
