--- a/source/sass/blocks/advantages-list.scss
+++ b/source/sass/blocks/advantages-list.scss
@@ -109,15 +109,22 @@
 @media (min-width: 768px) {
   .advantages-list__item {
     box-sizing: border-box;
+    margin-bottom: 88px;
+    padding-left: 0;
+    padding-right: 90px;
+    padding-top: 112px;
+    padding-bottom: 45px;
+
     flex-basis: 354px;
     width: 354px;
-    padding-left: 0;
-    padding-right: 100px;
-    padding-top: 115px;
-    margin-bottom: 90px;
 
     font-size: $basicFontSize;
     line-height: $mediumLineHeight;
+  }
+
+  .advantages-list__item:nth-of-type(2n) {
+    padding-left: 30px;
+    padding-right: 60px;
   }
 
   .advantages-list__item--no-margin {
@@ -137,7 +144,7 @@
     height: 80px;
 
     top: 12px;
-    left: 15px;
+    left: 45px;
   }
 
   .advantages-list__third-item-img::after {
@@ -153,27 +160,33 @@
     height: 80px;
 
     top: 12px;
-    left: 15px;
+    left: 45px;
   }
 
   .advantages-list__first-item-img::before {
     width: 80px;
     height: 80px;
+    top: 0;
   }
 
   .advantages-list__second-item-img::before {
     width: 80px;
     height: 80px;
+    left: 30px;
+    top: 0;
   }
 
   .advantages-list__third-item-img::before {
     width: 80px;
     height: 80px;
+    top: 0;
   }
 
   .advantages-list__fourth-item-img::before {
     width: 80px;
     height: 80px;
+    left: 30px;
+    top: 0;
   }
 
   .advantages-list__item--first-item-bg {
@@ -189,8 +202,8 @@
     line-height: 281px;
     color: #f2f2f2;
 
-    bottom: -55px;
-    left: 120px;
+    bottom: -14px;
+    left: 118px;
     z-index: -1;
   }
 
@@ -207,8 +220,8 @@
     line-height: 281px;
     color: #f2f2f2;
 
-    bottom: -55px;
-    left: 120px;
+    bottom: -14px;
+    left: 141px;
     z-index: -1;
   }
 
@@ -225,8 +238,8 @@
     line-height: 281px;
     color: #f2f2f2;
 
-    bottom: -55px;
-    left: 120px;
+    bottom: -14px;
+    left: 113px;
     z-index: -1;
   }
 
@@ -243,8 +256,8 @@
     line-height: 281px;
     color: #f2f2f2;
 
-    bottom: -55px;
-    left: 120px;
+    bottom: -14px;
+    left: 143px;
     z-index: -1;
   }
 }
