--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -35,7 +35,7 @@
 
 .contacts__map {
   width: 100%;
-  min-height: 362px;
+  height: 362px;
   border: none;
 
   vertical-align: top;
@@ -47,6 +47,8 @@
   }
 
   .contacts__wrapper {
+    padding-top: 65px;
+    padding-bottom: 55px;
     padding-left: 30px;
     padding-right: 30px;
 
@@ -71,6 +73,10 @@
     flex-basis: 160px;
     width: 160px;
   }
+
+  .contacts__map {
+    height: 396px;
+  }
 }
 
 @media (min-width: 1440px) {
@@ -81,5 +87,9 @@
   .contacts__wrapper {
     padding-left: 110px;
     padding-right: 110px;
+  }
+
+  .contacts__map {
+    height: 400px;
   }
 }
