--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -28,7 +28,7 @@
   padding-right: 5px;
 
   font-family: "Arial", sans-serif;
-  font-size: 14px;
+  font-size: $smallFontSize;
   line-height: 18px;
   color: $thirdFontColor;
 }
@@ -53,11 +53,48 @@
 
 @media (min-width: 768px) {
   .example {
-    padding-left: 20px;
-    padding-right: 20px;
-
-    min-height: 1080px;
+    padding-top: 43px;
+    padding-bottom: 60px;
     background: linear-gradient(to bottom, #ffffff 0, #ffffff 620px, #f2f2f2 620px, #f2f2f2 100%);
+  }
+
+  .example__wrapper {
+    margin-bottom: 15px;
+    padding-bottom: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  .example__title {
+    width: inherit;
+    margin-bottom: 64px;
+    font-size: $bigFontSize;
+    line-height: $largeLineHeight;
+  }
+
+  .example__about {
+    margin-bottom: 53px;
+    font-size: $basicFontSize;
+    line-height: $mediumLineHeight;
+    padding-right: 10px;
+  }
+
+  .example__progress-wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .example__progress {
+    flex-grow: 1;
+    justify-content: flex-start;
+  }
+
+  .example__expenses {
+    padding-top: 8px;
+    flex-basis: 180px;
+    width: 180px;
+    text-align: right;
+    font-size: $lowFontSize;
+    line-height: 28px;
   }
 
   .slider__images {
