--- a/source/sass/blocks/main-menu.scss
+++ b/source/sass/blocks/main-menu.scss
@@ -26,6 +26,7 @@
   }
 
   .main-menu__list {
+    padding-top: 20px;
     display: flex;
     justify-content: space-between;
   }
@@ -46,7 +47,7 @@
     content: "";
     width: 100%;
     height: 2px;
-    bottom: 12px;
+    bottom: 13px;
     left: 0;
     background-color: #68b738;
   }
