--- a/source/sass/blocks/progress.scss
+++ b/source/sass/blocks/progress.scss
@@ -4,8 +4,8 @@
   margin: 0;
   padding-top: 16px;
   padding-bottom: 22px;
-  width: 122px;
   flex-basis: 122px;
+  width: 122px;
 
 
   border: $borderGrayTypeThree;
@@ -13,7 +13,7 @@
 
   font-family: $oswaldRegular;
   font-size: $mediumFontSize;
-  list-style: 24px;
+  line-height: $mediumLineHeight;
   text-transform: uppercase;
   color: $basicFontColor;
   text-align: center;
@@ -23,10 +23,11 @@
   position: absolute;
   padding: 0 8px;
 
-  width: 70px;
-  left: 32%;
-  transform: translate(-25%, 65%);
+  width: auto;
+  left: 50%;
   bottom: 0;
+  transform: translate(-50%, 50%);
+
 
   font-family: "Arial", sans-serif;
   font-size: $tinyFontSize;
@@ -35,4 +36,31 @@
   color: $thirdFontColor;
 
   background-color: $bgColorSecondary;
+}
+
+@media (min-width: 768px) {
+  .progress {
+    margin-bottom: 0;
+  }
+
+  .progress__value {
+    margin-right: 42px;
+    flex-basis: 160px;
+    width: 160px;
+    padding-bottom: 17px;
+    font-size: 30px;
+    line-height: 37px;
+  }
+
+  .progress__type {
+    width: 114px;
+    font-size: $smallFontSize;
+    line-height: $smallLineHeight;
+
+    background-color: #ffffff;
+  }
+
+  .progress__type--large-width {
+    width: 142px;
+  }
 }
