--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -33,21 +33,22 @@
   .advantages__list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
     width: inherit;
   }
 }
 
 @media (min-width: 1440px) {
   .advantages {
-    padding-top: 50px;
-    padding-bottom: 55px;
+    padding-top: 74px;
+    padding-bottom: 65px;
     padding-left: 110px;
     padding-right: 110px;
   }
 
   .advantages__list {
     display: flex;
-    flex-wrap: no-wrap;
+    flex-wrap: nowrap;
     justify-content: space-between;
     width: inherit;
   }
