--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -96,6 +96,7 @@
     padding-left: 190px;
     padding-right: 110px;
     padding-top: 0;
+    height: 0;
     min-height: 0;
   }
 
@@ -106,7 +107,11 @@
 
   .promo__image {
     position: relative;
-    bottom: 75px;
+    bottom: 276px;
     left: 460px;
+  }
+
+  .promo__button {
+    margin-top: -569px;
   }
 }
