--- a/source/sass/blocks/extra-products.scss
+++ b/source/sass/blocks/extra-products.scss
@@ -1,3 +1,24 @@
+.extra-products {
+  position: relative;
+  z-index: 1;
+
+  padding: 0;
+
+  &::before {
+    position: absolute;
+    z-index: -1;
+    top: 43px;
+
+    width: 100%;
+    height: 3px;
+
+    content: "";
+
+    background: linear-gradient(to right, transparent 0, transparent 267px, #68b738 267px, #68b738 100%);
+
+  }
+}
+
 .extra-products__title {
   font-family: $oswaldRegular;
   font-size: $mediumFontSize;
@@ -15,27 +36,53 @@
 
   color: $basicFontColor;
   border-bottom: $borderGrayTypeThree;
-}
+  background: linear-gradient(to right, transparent 0, transparent 20px, #ffffff 20px, #ffffff 267px, transparent 267px, transparent 100%);
 
+}
 
 @media (min-width: 768px) {
   .extra-products {
-    position: relative;
-    z-index: 1;
-
-    padding: 0;
-
     &::before {
       position: absolute;
       z-index: -1;
-      top: 43px;
+      top: 89px;
 
       width: 100%;
-      height: 5px;
-
-      content: "";
+      height: 3px;
 
       background: #68b738;
     }
+  }
+
+  .extra-products__title {
+    font-size: $largeFontSize;
+    line-height: 36px;
+    margin-bottom: 46px;
+    padding-top: 67px;
+    padding-left: 67px;
+    border-bottom: none;
+    background: linear-gradient(to right, transparent 0, transparent 30px, #ffffff 30px, #ffffff 441px, transparent 267px, transparent 100%);
+  }
+
+  .extra-products__inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+
+  .extra-products__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+
+  .extra-products__item {
+    margin-top: 0px;
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+
+  .extra-products__item--no-margin {
+    margin-top: 0;
   }
 }
