--- a/source/sass/blocks/extra-products.scss
+++ b/source/sass/blocks/extra-products.scss
@@ -43,13 +43,7 @@
 @media (min-width: 768px) {
   .extra-products {
     &::before {
-      position: absolute;
-      z-index: -1;
       top: 89px;
-
-      width: 100%;
-      height: 3px;
-
       background: #68b738;
     }
   }
@@ -84,5 +78,41 @@
 
   .extra-products__item--no-margin {
     margin-top: 0;
+  }
+}
+
+@media (min-width: 1440px) {
+  .extra-products {
+    padding-bottom: 86px;
+
+    &::before {
+      top: 99px;
+    }
+  }
+
+  .extra-products__title {
+    margin-bottom: 46px;
+    padding-top: 77px;
+    padding-left: 109px;
+    border-bottom: none;
+    background: linear-gradient(to right, transparent 0, transparent 70px, #ffffff 70px, #ffffff 483px, transparent 483px, transparent 100%);
+  }
+
+  .extra-products__inner {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 110px;
+    padding-left: 110px;
+  }
+
+  .extra-products__wrapper {
+    flex-grow: 1;
+    max-width: 895px;
+  }
+
+  .extra-products__item {
+    padding-right: 0;
+    padding-left: 0;
   }
 }
